<resources>
    <string name="app_name">Movie Online</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>

    <string name="title_register_failed">Register Failed</string>
    <string name="title_error">Error</string>

    <string name="label_name">Name</string>
    <string name="label_register">Register</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>

    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_retry">Retry</string>

    <string name="error_email_invalid">This email address is invalid</string>
    <string name="error_email_conflict">This email address is conflict</string>
    <string name="error_password_invalid">This password is too short</string>
    <string name="error_confirm_password_incorrect">Confirm password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
